--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,6 +2,11 @@
   font-family: 'Open Sans', sans-serif;
 }
 
+header img{
+  width: 80px;
+  height: 80px;
+}
+
 ul{
    margin-left: 0px;
    padding-left: 0px;
